[package]
name = "pynanoid"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/arunanshub/pynanoid"
categories = ["algorithms"]
description = "A tiny, secure, URL-friendly, unique string ID generator."
# only the listed files are included in the source distribution (sdist)
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/src",
    "/rust",
    "/benches",
    "!__pycache__",
    "!tests/.hypothesis",
    "!tests/.pytest_cache",
    "!*.so",
]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"] }
rand = "0.10"
thiserror = "2.0"

[dev-dependencies]
divan = "0.1.21"
proptest = "1.11"

[lib]
# name = "nanoid"
path = "rust/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is necessary to execute the benches.
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bench]]
name = "basic"
harness = false
